fixed overflowing content when on mobile screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,19 +46,24 @@
     } 
 }
 
-
 @media (max-width: 575.98px) { 
+    #aboutSection{
+        margin-top: 40px;
+        margin-bottom: 20px;
+    } 
     #aboutSection > h1{
         font-size: 2.2rem;
     } 
-}
-
-@media (max-width: 575.98px) { 
     #aboutSection > h4{
         font-size: 1.2rem;
     } 
 }
 
+@media (max-width: 575.98px) { 
+    #page2{
+        overflow: auto;
+    }
+}
 
 /* Page Specific */
 
